implemented parameterized tests for update UserControllerTest